TAG: qcreports_db-6-0-18-?
DATE: 04/06/2022
STAFF: lec
wts2-802/HT index custom & QC reports don't work with GEO primary ids
added logicaldb = 190
#       modified:   GXD_HTExpCuration.py
#       modified:   GXD_HTSampleGenotypeNA.py
#       modified:   GXD_HTSampleNoAge.sql
#       modified:   GXD_HTSampleNoStructure.py
#       modified:   GXD_HTSampleTheilerAge.py

TAG: qcreports_db-6-0-18-9
TAG: qcreports_db-6-0-18-8
DATE: 03/23/2022
STAFF: lec
wts2-703/new Noctua -> GO Annotation pipeline
#	modified:   qcnightly_reports.csh
remove: mgidbmigration/tr13272/go_cam.csh
remove: weekly/PHENO_Features.py per Allele Relationship PWI
wts2-804/modify BIB_Duplicates.sql.rpt to "ignore" period at end of title

TAG: qcreports_db-6-0-18-7
TAG: qcreports_db-6-0-18-6
DATE: 02/21/2022
STAFF: lec
CHANGES:
wts2-767/mgi_notechunk/mgi_note merge

TAG: not tag
DATE: 01/31/2022
STAFF: lec
monthly/ALL_RefCounts.py; added jason.beckwith@jax.org

TAG: qcreports_db-6-0-18-5
DATE: 02/09/2020
STAFF: lec
wts2-773/Adding curator column to New Allele Report
#       modified:   weekly/ALL_NewAllele.py

TAG: qcreports_db-6-0-18-4
TAG: qcreports_db-6-0-18-3
TAG: qcreports_db-6-0-18-2
TAG: qcreports_db-6-0-18-1
DATE: 01/10/2022
STAFF: sc
Merge YAKS branch to trunk
lec - monthly/ALL_RefCounts.py; added jason.beckwith@jax.org

TAG: qcreports_db-6-0-17-27
TAG: qcreports_db-6-0-17-26
DATE: 12/27/2021
STAFF: lec
wts2-750/Allele report "Review for AP:NewAlleleNomenclature tag" not finding all relevant "routed" pdfs
mgd/WF_AP_NewAlleleNomenTag.py
sym link removed:  weeklyGO_stats.py

TAG: qcreports_db-6-0-17-25
TAG: qcreports_db-6-0-17-24
TAG: qcreports_db-6-0-17-23
DATE: 12/20/2021, 12/21/2021
STAFF: lec
wts2-752/add all root section to GO Stats report/GO_stats.py
wts2-747/add resonsible person to Allele QC reports
wts2-746/discontinue selected 'Allele' and 'Strain' QC reports

remove:
ALL_NoMutantSentence.py
ALL_SequenceReference.sql
ALL_UncodedReference.py
ALL_NoPhenoRef.py
ALL_MCLAllele.sql